--- a/CALCULADORA/index.html
+++ b/CALCULADORA/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <title>CALCULADORA</title>
-    </head>
-    <body>
-        <form method="POST" action="calc.php"></form>
-        <label>Número 1: </label>
-        <input type="text" name="n1">
-        <label>Número 2: </label>
-        <input type="text" name="n2">
-        <button type="submit" name="sum" value="Soma"></button>
-        <button type="submit" name="subtract" value="Subtração"></button>
-        <button type="submit" name="multiply" value="Multiplicação"></button>
-        <button type="submit" name="divide" value="Divisão"></button>
-    </body>
+<head>
+<title>CALCULADORA</title>
+<meta charset="UTF-8">
+</head>
+<body>
+<form action="script.php" method="post">
+Fator 1:<input type = "text" name="num1"/><br>
+Fator 2:<input type = "text" name="num2"/><br>
+<input type="submit" name = 'operation' value="Somar">
+<input type="submit" name = 'operation' value="Subtrair">
+<input type="submit" name = 'operation' value="Multiplicar">
+<input type="submit" name = 'operation' value="Dividir">
+</form>
+</body>
 </html>
