--- a/CALCULADORA/index.html
+++ b/CALCULADORA/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <form action="script.php" method="post">
-Fator 1:<input type = "text" name="num1"/><br>
-Fator 2:<input type = "text" name="num2"/><br>
+Fator 1:<input type = "text" name="num1"/><br><br>
+Fator 2:<input type = "text" name="num2"/><br><br>
 <input type="submit" name = 'operation' value="Somar">
 <input type="submit" name = 'operation' value="Subtrair">
 <input type="submit" name = 'operation' value="Multiplicar">
